--- a/Project chapters/amplitudeofsound.html
+++ b/Project chapters/amplitudeofsound.html
@@ -1,6 +1,6 @@
 <head>
     <title>Introduction</title>
-    <link rel="stylesheet" href="Project chapters/amplitudeofsound.css">
+    <link rel="stylesheet" href="amplitudeofsound.css">
     
 </head>
 
