--- a/Project chapters/amplitudeofsound.html
+++ b/Project chapters/amplitudeofsound.html
@@ -9,19 +9,19 @@
     
     
     <div class="container">
-        <img src="chapters/Amplitude/wallpaper.1.jpeg" alt="Image 1">
+        <img src="../chapters/Amplitude/wallpaper.1.jpeg" alt="Image 1">
         </a>
 
-        <img src="chapters/Amplitude/wallpaper.2.jpeg" alt="Image 1">
+        <img src="../chapters/Amplitude/wallpaper.2.jpeg" alt="Image 1">
         </a>
 
-        <img src="chapters/Amplitude/wallpaper.3.jpeg" alt="Image 1">
+        <img src="../chapters/Amplitude/wallpaper.3.jpeg" alt="Image 1">
         </a>
 
-        <img src="chapters/Amplitude/wallpaper.4.jpeg" alt="Image 1">
+        <img src="../chapters/Amplitude/wallpaper.4.jpeg" alt="Image 1">
         </a>
 
-        <img src="chapters/Amplitude/wallpaper.5.jpeg" alt="Image 1">
+        <img src="../chapters/Amplitude/wallpaper.5.jpeg" alt="Image 1">
         </a>
     </div>
 
