--- a/Project chapters/soundproductionandreceptioninanimals.html
+++ b/Project chapters/soundproductionandreceptioninanimals.html
@@ -9,28 +9,28 @@
     
     
     <div class="container">
-        <img src="/chapters/Animals/Animals.1.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.1.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Animals/Animals.2.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.2.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Animals/Animals.3.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.3.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Animals/Animals.4.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.4.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Animals/Animals.5.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.5.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Animals/Animals.6.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.6.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Animals/Animals.7.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.7.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Animals/Animals.8.jpeg" alt="Image 1">
+        <img src="../chapters/Animals/Animals.8.jpeg" alt="Image 1">
         </a>
     </div>
 
