--- a/Project chapters/soundrecording.html
+++ b/Project chapters/soundrecording.html
@@ -9,61 +9,61 @@
     
     
     <div class="container">
-        <img src="/chapters/Soundrecording/Soundrecording.1.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.1.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.2.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.2.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.3.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.3.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.4.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.4.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.5.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.5.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.6.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.6.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.7.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.7.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.8.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.8.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.9.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.9.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.10.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.10.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.11.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.11.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.12.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.12.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.13.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.13.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.14.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.14.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.15.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.15.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.16.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.16.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.17.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.17.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.18.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.18.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Soundrecording/Soundrecording.19.jpeg" alt="Image 1">
+        <img src="../chapters/Soundrecording/Soundrecording.19.jpeg" alt="Image 1">
         </a>
     </div>
 
