--- a/Project chapters/theloudspeaker.html
+++ b/Project chapters/theloudspeaker.html
@@ -9,43 +9,43 @@
     
     
     <div class="container">
-        <img src="/chapters/Loudspeaker/Loudspeaker.1.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.1.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.2.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.2.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.3.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.3.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.4.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.4.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.5.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.5.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.6.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.6.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.7.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.7.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.8.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.8.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.9.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.9.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.10.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.10.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.11.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.11.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.12.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.12.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Loudspeaker/Loudspeaker.13.jpeg" alt="Image 1">
+        <img src="../chapters/Loudspeaker/Loudspeaker.13.jpeg" alt="Image 1">
         </a>
 
     </div>
