--- a/Project chapters/velocityofsound.html
+++ b/Project chapters/velocityofsound.html
@@ -9,22 +9,22 @@
     
     
     <div class="container">
-        <img src="/chapters/Velocity/velocity of sound.jpeg" alt="Image 1">
+        <img src="../chapters/Velocity/velocity of sound.jpeg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Velocity/velocity of sound1.jpg" alt="Image 1">
+        <img src="../chapters/Velocity/velocity of sound1.jpg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Velocity/velocity of sound2.jpg" alt="Image 1">
+        <img src="../chapters/Velocity/velocity of sound2.jpg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Velocity/velocity of sound3.jpg" alt="Image 1">
+        <img src="../chapters/Velocity/velocity of sound3.jpg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Velocity/velocity of sound4.jpg" alt="Image 1">
+        <img src="../chapters/Velocity/velocity of sound4.jpg" alt="Image 1">
         </a>
 
-        <img src="/chapters/Velocity/velocity of sound5.jpg" alt="Image 1">
+        <img src="../chapters/Velocity/velocity of sound5.jpg" alt="Image 1">
         </a>
     </div>
 
