--- a/keynote.html
+++ b/keynote.html
@@ -24,7 +24,7 @@
     <!-- First Video -->
     <div class="video-wrapper">
         <video class="first-video" autoplay muted loop controls>
-            <source src="https://www.dropbox.com/scl/fi/c0b9bkc1ird5qyx0zcvy3/keynote.mp4?rlkey=the06ioesbsxu35xeelv57r4x&st=klawzls4&dl=0" type="video/mp4">
+            <source src="https://www.dropbox.com/scl/fi/c0b9bkc1ird5qyx0zcvy3/keynote.mp4?rlkey=the06ioesbsxu35xeelv57r4x&st=4bcryshb&raw=1" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
