--- a/discover.html
+++ b/discover.html
@@ -23,18 +23,12 @@
 
     
 <video class="first-video" width="640" height="360" autoplay muted loop>
-    <source src="https://www.dropbox.com/scl/fi/c0b9bkc1ird5qyx0zcvy3/keynote.mp4?rlkey=the06ioesbsxu35xeelv57r4x&st=4bcryshb&raw=1" type="video/mp4">
+    <source src="https://www.dropbox.com/scl/fi/b4mpqxmbyqw8t9o9fxypi/keynote-for-website.mp4?rlkey=ibt5khwo3nuxahhhzwa0k0gud&st=mcb9g6zd&raw=1" type="video/mp4">
     Your browser does not support the video tag.
 </video>
-```
 
-### Notes:
-- Ensure the video file is publicly accessible in Dropbox.
-- Test the link in your browser to confirm it works as a direct download before embedding it in your HTML.
 
-Let me know if you need further assistance!" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
+
 
     
 
