--- a/discover.html
+++ b/discover.html
@@ -22,7 +22,7 @@
     
 
     
-<video class="first-video" width="640" height="360" autoplay muted loop>
+<video class="first-video" width="640" height="360" autoplay muted loop controls>
     <source src="https://www.dropbox.com/scl/fi/b4mpqxmbyqw8t9o9fxypi/keynote-for-website.mp4?rlkey=ibt5khwo3nuxahhhzwa0k0gud&st=i2f3po74&raw=1" type="video/mp4">
     Your browser does not support the video tag.
 </video>
