--- a/photos.html
+++ b/photos.html
@@ -106,41 +106,41 @@
         </a>
 
         <a href="Photo gallery/Soldering\ components/IMG_8980.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8980.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8980.jpeg" alt="Image 1">
         </a>
 
         <a href="Photo gallery/Soldering components/IMG_8981.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8981.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8981.jpeg" alt="Image 1">
         </a>
 
         <a href="Photo gallery/Soldering components/IMG_8982.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8982.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8982.jpeg" alt="Image 1">
         </a>
 
         
         <a href="Photo gallery/Soldering components/IMG_8984.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8984.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8984.jpeg" alt="Image 1">
         </a>
         <a href="Photo gallery/Soldering components/IMG_8985.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8985.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8985.jpeg" alt="Image 1">
         </a>
 
         <a href="Photo gallery/Soldering components/IMG_8986.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8986.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8986.jpeg" alt="Image 1">
         </a>
 
         <a href="Photo gallery/Soldering components/IMG_8987.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8987.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8987.jpeg" alt="Image 1">
         </a>
 
         <a href="Photo gallery/Soldering components/IMG_8988.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8988.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8988.jpeg" alt="Image 1">
         </a>
 
        
 
         <a href="Photo gallery/Soldering components/IMG_8983.jpeg" target="_blank" rel="noopener noreferrer">
-            <img src="/Photo gallery/Soldering\ components/IMG_8983.jpeg" alt="Image 1">
+            <img src="Photo gallery/Soldering\ components/IMG_8983.jpeg" alt="Image 1">
         </a>
 
         <a href="Photo gallery/Glueing/IMG_023.jpeg" target="_blank" rel="noopener noreferrer">
