--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
     <title>The Science of Sound</title>
     <link rel="stylesheet" href="file.css">
 </head>
+<script>
+    window.addEventListener("scroll", function () {
+        const scrollPosition = window.scrollY; // Get the vertical scroll position
+        const zoomLevel = 100 + scrollPosition * 0.1; // Adjust zoom level (tweak multiplier as needed)
+        document.body.style.backgroundSize = `${zoomLevel}%`; // Apply zoom effect
+    });
 
+    // Redirect to mobile version if screen width is less than or equal to 768px
+    if (window.innerWidth <= 768) {
+        window.location.href = "mobile.html";
+    }
+</script>
 <body>
 
     <nav class="navbar">
@@ -35,12 +46,6 @@
 
     
 
-    <script>
-        window.addEventListener("scroll", function () {
-            const scrollPosition = window.scrollY; // Get the vertical scroll position
-            const zoomLevel = 100 + scrollPosition * 0.1; // Adjust zoom level (tweak multiplier as needed)
-            document.body.style.backgroundSize = `${zoomLevel}%`; // Apply zoom effect
-        });
-    </script>
+    
 
 </body>
