--- a/mobile.html
+++ b/mobile.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <head>
     <title>The Science of Sound</title>
     <link rel="stylesheet" href="mobile.css">
